...
    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="@string/button_left"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_right"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginEnd="78dp"
        android:text="@string/button_snap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_right" />

    <TextView
        android:id="@+id/timestamp_textview"
        android:layout_width="254dp"
        android:layout_height="72dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="76dp"
...
